ver 0.23.10 (not yet released)
* storage
  - curl: fix file time stamps
* decoder
  - ffmpeg: fix libfmt 9 compiler warning
* encoder
  - flac: fix failure when libFLAC is built without Ogg support
* Windows
  - log to stdout by default, don't require "log_file" setting

ver 0.23.9 (2022/08/18)
* input
  - cdio_paranoia: add options "mode" and "skip"
* decoder
  - ffmpeg: support FFmpeg 5.1
* filter
  - replay gain: fix delayed volume display with handler=mixer
* output
  - pipewire: set app icon
* fix bogus volume levels with multiple partitions
* improve iconv detection
* macOS: fix macOS 10 build problem (0.23.8 regression)
* Android
  - load mpd.conf from app data directory

ver 0.23.8 (2022/07/09)
* storage
  - curl: fix crash if web server does not understand WebDAV
* input
  - cdio_paranoia: fix crash if no drive was found
  - cdio_paranoia: faster cancellation
  - cdio_paranoia: don't scan for replay gain tags
  - pipewire: fix playback of very short tracks
  - pipewire: drop all buffers before manual song change
  - pipewire: fix stuttering after manual song change
  - snapcast: fix busy loop while paused
  - snapcast: fix stuttering after resuming playback
* mixer
  - better error messages
  - alsa: fix setting volume before playback starts
  - pipewire: fix crash bug
  - pipewire: fix volume change events with PipeWire 0.3.53
  - pipewire: don't force initial volume=100%
* support libfmt 9

ver 0.23.7 (2022/05/09)
* database
  - upnp: support pupnp 1.14
* decoder
  - ffmpeg: fix HLS seeking
  - opus: fix missing song length on high-latency files
* output
  - shout: require at least libshout 2.4.0
* mixer
  - pipewire: fix volume restore
  - software: update volume of disabled outputs
* support libiconv

ver 0.23.6 (2022/03/14)
* protocol
  - support filename "cover.webp" for "albumart" command
  - support "readcomments" and "readpicture" on CUE tracks
* decoder
  - ffmpeg: fix end-of-file check (update stuck at empty files)